# congapp

./: .gitignore  README.md
conga-app/: README.md  package.json  size-plugin.json
conga-app/src/: manifest.json
conga-app/src/components/: Card.js  Lobby.js  Table.js  TableEnd.js  TableFinish.js  TableWaiting.js  app.js  styles.css
conga-app/src/routes/home/: game.json  index.js
conga-app/src/style/: index.css
conga-server/: .gitignore  pyproject.toml
conga-server/conga/: app.py  card.py  game.py  player.py
conga-server/tests/: test_conga.py
