[tool.poetry]
name = "conga"
version = "0.1.0"
description = ""
authors = ["Leonardo Piñeyro <leopiney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
dataclasses-json = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
ipython = "^7.13.0"
ipdb = "^0.13.2"
uvicorn = "^0.11.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
